      Conrad
  * checks/shared-libs:
    + [FL] Don't report shlib-with-executable-bit and
      shlib-with-bad-permissions on symbolic links to such files

  * debian/{control,rules}, frontend/lintian:
    + [JvW] Insert version number at package build time, no need to commit a
      change to frontend/lintian on every version number change... Requires
      sed version 4 at build-time.

  * testset/filenames:
    + [JvW] Fix two lintian warnings in lintian itself by touching files only
      on clean target, and not distributing them in the source

 -- Debian Lintian Maintainers <lintian-maint@debian.org>  Sat, 01 May 2004 15:29:49 +0200

lintian (1.23.0) unstable; urgency=low

  The ``moving forward'' release, prepared by Marc 'HE' Brockschmidt,
  Frank Lichtenheld and Jeroen van Wolffelaar.

  * [FL] add udeb support (Closes: #216117)
    Thanks to Joey Hess for his input. Many changes, mostly to
    frontend/lintian, checks/debconf and checks/files

  * checks/binaries:
    + [JvW] Ignore static binaries in /usr/lib/debug
  * checks/changelog-file:
    + [HE] Check for the debmake template email address in the changelog
      entries. Patch by Steffen Moeller <moeller@pzr.uni-rostock.de>,
      thanks! (Closes: #199903)
    + [JvW] Loosen up checks for -0.x versions, could be either native or
      upstream + Debian revision, so some tests cannot be performed because of
      that uncertainty
  * checks/copyright-file:
    + [HE] Change usr-doc-symlink-to-foreign-package check to throw an
      error when a package doesn't depend on the *same* version of the
      package its /usr/share/doc/$foo dir is symlinked to. This is supposed
      to ensure that both come from the same source and the same source
      version. (Closes: #201470)
  * checks/cruft.desc:
    + [HE] Reworded some parts and bumped the Standards-Version after
      checking for changes. (Closes: #235735)
  * checks/debconf{,.desc}: