@@ -17,11 +17,14 @@ lintian (1.23.1~alpha) unstable; urgency=low
       change to frontend/lintian on every version number change... Requires
       sed version 4 at build-time.
 
+  * frontend/lintian:
+    + [JvW] Factorize some code out of the (huge) lintian file into some libs
+
   * testset/filenames:
     + [JvW] Fix two lintian warnings in lintian itself by touching files only
       on clean target, and not distributing them in the source
 
- -- Debian Lintian Maintainers <lintian-maint@debian.org>  Sat, 01 May 2004 15:29:49 +0200
+ -- Debian Lintian Maintainers <lintian-maint@debian.org>  Sat, 01 May 2004 18:45:13 +0200
 
 lintian (1.23.0) unstable; urgency=low
 
